# stsh

./: .hgignore  CMakeLists.txt  CMakePresets.json  README  README.markdown
.github/workflows/: cmake.yml
src/: Makefile  execute.c  execute.h  lexer.l  main.c  misc.c  misc.h  parser.h  parser.y  sig.c  sig.h
